# Point-cloud-descriptors-for-classification

./: README.md
Compactness/: CMakeLists.txt  ReadMe.md  compactness.h  compactness_classifier.cpp  compactness_classifier_eval.cpp  compactness_measure.cpp  compactness_measure_planimetric.cpp  example_ethz_random_forest.cpp
Skeletonisation/: ReadMe.md  results_distance vertex.txt
